@@ -8,6 +8,7 @@ dist = Specio
 prereqs_skip = Moo
 prereqs_skip = Moose
 prereqs_skip = Mouse
+prereqs_skip = namespace::autoclean
 stopwords_file = .stopwords
 -remove = Test::CleanNamespaces
 -remove = Test::Pod::No404s
@@ -16,6 +17,8 @@ stopwords_file = .stopwords
 [Prereqs / DevelopRequires]
 Moo = 0
 Moose = 2.1207
+Mouse = 0
+namespace::autoclean = 0
 
 [MetaNoIndex]
 directory = t/lib
