@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Removed test dependency on namespace::autoclean.
+
+
 0.19     2016-06-17
 
 - Removed dependency on Devel::PartialDump by making a copy of just the bits
